--- a/ecommerce/src/components/HomePage/Home.module.css
+++ b/ecommerce/src/components/HomePage/Home.module.css
@@ -15,16 +15,20 @@
   /* object-position: bottom; */
   object-fit: cover;
   object-position: center 65%;
+  user-select: none;
+  pointer-events: none;
 }
 
 .blackTint {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.2);
   z-index: 1;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  user-select: none;
+  pointer-events: none;
 }
 
 .headerText {
